refactor(waybar): Moved modules

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -42,6 +42,7 @@ exec-once = [workspace 1 silent] $browser
 exec-once = [workspace 2 silent] $terminal
 exec-once = [workspace 3 silent] obsidian
 exec-once = waybar & hypridle
+exec-once = swww restore # Restores wallpaper
 exec-once = wl-paste --type text --watch cliphist store # Stores only text data
 exec-once = wl-paste --type image --watch cliphist store # Stores only image data
 
