feat(waybar): Better networking

--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -30,7 +30,7 @@
         "tray",
         "custom/clipboard",
         "custom/colorpicker",
-        "pulseaudio",
+        "group/sound",
         "network"
     ]
 }
