feat(keyboard): Using alt_shift to toggle the inputs

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -174,7 +174,7 @@ misc {
 input {
     kb_layout = us,bg
     kb_variant = ,phonetic
-    kb_options = grp:alt_space_toggle
+    kb_options = grp:alt_shift_toggle
     kb_model =
     kb_rules =
 
