--- a/hyprland/.config/hypr/hyprlock.conf
+++ b/hyprland/.config/hypr/hyprlock.conf
@@ -6,7 +6,7 @@ $font = JetBrainsMono Nerd Font
 
 # GENERAL
 general {
-    # disable_loading_bar = true
+    disable_loading_bar = true
     hide_cursor = true
 }
 
@@ -14,7 +14,7 @@ background {
     monitor =
     path = screenshot
     color = $base
-    blur_passes = 2
+    blur_passes = 5
 }
 
 # TIME
@@ -32,11 +32,23 @@ label {
 # DATE 
 label {
     monitor = 
-    text = cmd[update:43200000] echo "$(date +"%A, %d %B %Y")"
+    text = cmd[update:43200000] echo "$(date +"%A, %d %B")"
     color = $text
     font_size = 25
     font_family = $font
     position = -30, -150
+    halign = right
+    valign = top
+}
+
+# DATE 
+label {
+    monitor = 
+    text = cmd[update:43200000] echo "$(date +"Earth Year %Y")"
+    color = $text
+    font_size = 30
+    font_family = $font
+    position = -30, -200
     halign = right
     valign = top
 }
@@ -50,11 +62,11 @@ input-field {
     dots_size = 0.2
     dots_spacing = 0.2
     dots_center = true
-    outer_color = $accent
+    outer_color = $sky
     inner_color = $surface0
     font_color = $text
     fade_on_empty = false
-    placeholder_text = <span foreground="##$textAlpha"><i>󰌾 Logged in as </i><span foreground="##$accentAlpha">$USER</span></span>
+    placeholder_text = <span foreground="##$textAlpha">󰌾 <span foreground="##$skyAlpha">$USER</span><i>, Unlock Control Center</i> 󰌾</span>
     hide_input = false
     check_color = $accent
     fail_color = $red
