feat: hyprlock now has the same gradient

--- a/hyprland/.config/hypr/hyprlock.conf
+++ b/hyprland/.config/hypr/hyprlock.conf
@@ -62,7 +62,7 @@ input-field {
     dots_size = 0.2
     dots_spacing = 0.2
     dots_center = true
-    outer_color = $sky
+    outer_color = rgba(33ccffee) rgba(00ff99ee) 0deg
     inner_color = $surface0
     font_color = $text
     fade_on_empty = false
