feat: show more wallpapers and changed default

--- a/waypaper/.config/waypaper/config.ini
+++ b/waypaper/.config/waypaper/config.ini
@@ -2,15 +2,15 @@
 language = en
 folder = ~/Wallpapers
 monitors = All
-wallpaper = ~/Wallpapers/wallpapers/Fantasy - Mountain Sky.jpeg
+wallpaper = ~/Wallpapers/wallpapers/uwp4763272.jpeg
 show_path_in_tooltip = True
 backend = swww
 fill = fill
 sort = name
 color = #ffffff
 subfolders = True
-all_subfolders = False
-show_hidden = False
+all_subfolders = True
+show_hidden = True
 show_gifs_only = False
 post_command = 
 number_of_columns = 3
