feat(waypaper): Match the vibe of hyprland collors

--- a/waypaper/.config/waypaper/config.ini
+++ b/waypaper/.config/waypaper/config.ini
@@ -2,7 +2,7 @@
 language = en
 folder = ~/Wallpapers
 monitors = All
-wallpaper = ~/Wallpapers/wallpapers/uwp4763272.jpeg
+wallpaper = ~/Wallpapers/wallpapers/nice-blue-background.png
 show_path_in_tooltip = True
 backend = swww
 fill = fill
