feat(hyprlock): better lock text

--- a/hyprland/.config/hypr/hyprlock.conf
+++ b/hyprland/.config/hypr/hyprlock.conf
@@ -66,7 +66,7 @@ input-field {
     inner_color = $surface0
     font_color = $text
     fade_on_empty = false
-    placeholder_text = <span foreground="##$textAlpha">󰌾 <span foreground="##$skyAlpha">$USER</span><i>, Unlock Control Center</i> 󰌾</span>
+    placeholder_text = <span foreground="##$textAlpha">󰌾 <span foreground="##$skyAlpha">$USER</span><i>, unlock the Command and Control Center</i> 󰌾</span>
     hide_input = false
     check_color = $accent
     fail_color = $red
