feat: Added shortcuts for apps

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -213,16 +213,23 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, return, exec, $terminal
-bind = $mainMod, B, exec, $browser
 bind = $mainMod, Q, killactive,
 bind = $mainMod, Escape, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, space, exec, $menu
+bind = $mainMod, TAB, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, F, fullscreen,
 bind = $mainMod, M, fullscreen, 1
+
+# Open apps with mainMod and alt
+
+bind = $mainMod CTRL, B, exec, $browser
+bind = $mainMod CTRL, O, exec, obsidian
+bind = $mainMod CTRL, S, exec, steam
+bind = $mainMod CTRL, D, exec, discord
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
