feat: Change text on lock screen

--- a/hyprland/.config/hypr/hyprlock.conf
+++ b/hyprland/.config/hypr/hyprlock.conf
@@ -44,7 +44,7 @@ label {
 # DATE 
 label {
     monitor = 
-    text = cmd[update:43200000] echo "$(date +"Earth Year %Y")"
+    text = cmd[update:43200000] echo "$(date +"Earth, Year %Y")"
     color = $text
     font_size = 30
     font_family = $font
@@ -66,7 +66,7 @@ input-field {
     inner_color = $surface0
     font_color = $text
     fade_on_empty = false
-    placeholder_text = <span foreground="##$textAlpha">󰌾 <span foreground="##$skyAlpha">$USER</span><i>, unlock the Command and Control Center</i> 󰌾</span>
+    placeholder_text = <span foreground="##$textAlpha">󰌾 <span foreground="##$skyAlpha">$USER</span><i> welcome to Mission Control</i> 󰌾</span>
     hide_input = false
     check_color = $accent
     fail_color = $red
