feat(hypridle): Will now suspend after 10 min

--- a/hyprland/.config/hypr/hypridle.conf
+++ b/hyprland/.config/hypr/hypridle.conf
@@ -1,8 +1,14 @@
 general {
-    lock_cmd = pidof hyprlock || hyprlock
+    lock_cmd = pidof hyprlock || hyprlock         # avoid starting multiple hyprlock instances.
+    before_sleep_cmd = loginctl lock-session      # lock before suspend.
 }
 
 listener {
-    timeout = 300                                 # 5 minutes
+    timeout = 150                                 # 2.5min
     on-timeout = loginctl lock-session            # lock screen when timeout has passed
+}
+
+listener {
+    timeout = 600                                 # 10min
+    on-timeout = systemctl suspend                # suspend pc
 }
