--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -31,6 +31,7 @@
         "custom/clipboard",
         "custom/colorpicker",
         "group/sound",
-        "network"
+        "network",
+        "custom/exit"
     ]
 }
