feat(waybar): Powermenu on rightclick of arch, waypaper on right of colorpicker

--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -31,7 +31,6 @@
         "custom/clipboard",
         "custom/colorpicker",
         "group/sound",
-        "network",
-        "custom/exit"
+        "network"
     ]
 }
