--- a/hyprland/.config/hypr/conf/autostart.conf
+++ b/hyprland/.config/hypr/conf/autostart.conf
@@ -5,7 +5,7 @@
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
-exec-once = waybar & hypridle
+exec-once = waybar & hypridle & swaync
 exec-once = swww-daemon & swww restore # Restores wallpaper
 exec-once = wl-paste --type text --watch cliphist store # Stores only text data
 exec-once = wl-paste --type image --watch cliphist store # Stores only image data
