--- a/hyprland/.config/hypr/conf/keymaps.conf
+++ b/hyprland/.config/hypr/conf/keymaps.conf
@@ -32,6 +32,7 @@ bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
 
 bind = $mainMod, l, exec, hyprlock
+bind = $mainMod ALT, l, exec, systemctl suspend
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
