feat: Using opera instead of brave

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -17,7 +17,7 @@
 $terminal = alacritty
 $fileManager = nautilus
 $menu = wofi --show drun
-$browser = brave
+$browser = opera
 
 source = ~/.config/hypr/conf/layout.conf
 source = ~/.config/hypr/conf/autostart.conf
