fix: Suspend correctly

--- a/hyprland/.config/hypr/conf/autostart.conf
+++ b/hyprland/.config/hypr/conf/autostart.conf
@@ -10,3 +10,8 @@ exec-once = swww-daemon & swww restore # Restores wallpaper
 exec-once = wl-paste --type text --watch cliphist store # Stores only text data
 exec-once = wl-paste --type image --watch cliphist store # Stores only image data
 exec-once = systemctl --user start hyprpolkitagent
+
+# Temporary. Need a better fix
+
+# Needed because https://bugzilla.kernel.org/show_bug.cgi?id=217239
+exec-once = modprobe -r ath11k_pci 
