--- a/hyprland/.config/hypr/hypridle.conf
+++ b/hyprland/.config/hypr/hypridle.conf
@@ -1,14 +1,14 @@
 general {
-    lock_cmd = pidof hyprlock || hyprlock                    # avoid starting multiple hyprlock instances.
-    before_sleep_cmd = loginctl lock-session                 # lock before suspend.
+    lock_cmd = pidof hyprlock || hyprlock     # avoid starting multiple hyprlock instances.
+    before_sleep_cmd = loginctl lock-session  # lock before suspend.
 }
 
 listener {
-    timeout = 150                                            # 5min
-    on-timeout = loginctl lock-session                       # lock screen when timeout has passed
+    timeout = 150                             # 5min
+    on-timeout = loginctl lock-session        # lock screen when timeout has passed
 }
 
 listener {
-    timeout = 600                                            # 30min
-    on-timeout = modprobe -r ath11k_pci && systemctl suspend # suspend pc.... modprobe is needed cause https://bugzilla.kernel.org/show_bug.cgi?id=217239
+    timeout = 600                             # 30min
+    on-timeout = systemctl suspend            # suspend pc
 }
