feat: Lock now displays cpu, memory and temp

--- a/hyprland/.config/hypr/hyprlock.conf
+++ b/hyprland/.config/hypr/hyprlock.conf
@@ -53,6 +53,17 @@ label {
     valign = top
 }
 
+# TIME
+label {
+    monitor =
+    text = cmd[update:1000] echo "$($HOME/.local/bin/system_usage.sh)"
+    color = $text
+    font_size = 15
+    font_family = $font
+    position = -30, -250
+    halign = right
+    valign = top
+}
 
 # INPUT FIELD
 input-field {
