--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -24,6 +24,7 @@ source = ~/.config/hypr/conf/autostart.conf
 source = ~/.config/hypr/conf/monitors.conf
 source = ~/.config/hypr/conf/keymaps.conf
 source = ~/.config/hypr/conf/input.conf
+source = ~/.config/hypr/conf/windows_and_worspaces.conf
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -146,25 +147,3 @@ misc {
 
 
 
-##############################
-### WINDOWS AND WORKSPACES ###
-##############################
-
-# See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-# See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
-
-# Example windowrule
-# windowrule = float,class:^(kitty)$,title:^(kitty)$
-
-# Ignore maximize requests from apps. You'll probably like this.
-windowrule = suppressevent maximize, class:.*
-
-# Fix some dragging issues with XWayland
-windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
-
-layerrule = blur, swaync-control-center
-layerrule = blur, swaync-notification-window
-layerrule = ignorezero, swaync-control-center
-layerrule = ignorezero, swaync-notification-window
-layerrule = ignorealpha, swaync-control-center
-layerrule = ignorealpha, swaync-notification-window
