feat: Add reaload script. Triggered by SUPER + R too

--- a/hyprland/.config/hypr/conf/keymaps.conf
+++ b/hyprland/.config/hypr/conf/keymaps.conf
@@ -17,6 +17,7 @@ bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, F, fullscreen,
 bind = $mainMod, M, fullscreen, 1
+bind = $mainMod, R, exec, $HOME/.local/bin/reload
 
 # Open apps with mainMod and alt
 
