--- a/hyprland/.config/hypr/conf/windows_and_worspaces.conf
+++ b/hyprland/.config/hypr/conf/windows_and_worspaces.conf
@@ -14,9 +14,9 @@ windowrule = suppressevent maximize, class:.*
 # Fix some dragging issues with XWayland
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
 
-# layerrule = blur, swaync-control-center
-# layerrule = blur, swaync-notification-window
-# layerrule = ignorezero, swaync-control-center
-# layerrule = ignorezero, swaync-notification-window
-# layerrule = ignorealpha, swaync-control-center
-# layerrule = ignorealpha, swaync-notification-window
+layerrule = blur, swaync-control-center
+layerrule = blur, swaync-notification-window
+layerrule = ignorezero, swaync-control-center
+layerrule = ignorezero, swaync-notification-window
+layerrule = ignorealpha, swaync-control-center
+layerrule = ignorealpha, swaync-notification-window
