--- a/hyprland/.config/hypr/conf/keymaps.conf
+++ b/hyprland/.config/hypr/conf/keymaps.conf
@@ -19,6 +19,9 @@ bind = $mainMod, F, fullscreen,
 bind = $mainMod, M, fullscreen, 1
 bind = $mainMod, R, exec, $HOME/.local/bin/reload
 
+# Gamemode
+bind = $mainMod, F1, exec, ~/.config/hypr/scripts/gamemode.sh
+
 # Open apps with mainMod and alt
 
 bind = $mainMod CTRL, B, exec, $browser
