--- a/hyprland/.config/hypr/conf/keymaps.conf
+++ b/hyprland/.config/hypr/conf/keymaps.conf
@@ -37,6 +37,7 @@ bind = $mainMod, down, movefocus, d
 
 bind = $mainMod, l, exec, hyprlock
 bind = $mainMod ALT, l, exec, wlogout
+bind = $mainMod ALT, s, exec, alacritty -e ~/.dotfiles/stow.sh
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
