--- a/waypaper/.config/waypaper/config.ini
+++ b/waypaper/.config/waypaper/config.ini
@@ -2,7 +2,7 @@
 language = en
 folder = ~/Wallpapers
 monitors = All
-wallpaper = ~/Wallpapers/wallpapers/Sun-Setting-Horizon.png
+wallpaper = ~/Wallpapers/wallpapers/246903.jpg
 show_path_in_tooltip = True
 backend = swww
 fill = fill
