--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -71,6 +71,9 @@ decoration {
     active_opacity = 1.0
     inactive_opacity = 0.95
 
+    dim_inactive = true
+    dim_strength = 0.1
+
     shadow {
         enabled = true
         range = 4
