--- a/hyprland/.config/hypr/conf/keymaps.conf
+++ b/hyprland/.config/hypr/conf/keymaps.conf
@@ -51,6 +51,11 @@ bind = $mainMod, 8, workspace, 8
 bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
 
+bind = $mainMod ALT, left, movewindow, l
+bind = $mainMod ALT, right, movewindow, r
+bind = $mainMod ALT, up, movewindow, u
+bind = $mainMod ALT, down, movewindow, d
+
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
 bind = $mainMod SHIFT, 2, movetoworkspace, 2
