feat: Ultrawide setup

--- a/waypaper/.config/waypaper/config.ini
+++ b/waypaper/.config/waypaper/config.ini
@@ -2,7 +2,7 @@
 language = en
 folder = ~/Wallpapers
 monitors = All
-wallpaper = ~/Wallpapers/wallpapers/246903.jpg
+wallpaper = ~/Wallpapers/wallpapers/wp4473721-5120x1440-wallpapers.png
 show_path_in_tooltip = True
 backend = swww
 fill = fill
@@ -22,4 +22,5 @@ swww_transition_fps = 60
 mpvpaper_sound = False
 mpvpaper_options = 
 use_xdg_state = False
+zen_mode = False
 
