--- a/hyprland/.config/hypr/conf/monitors.conf
+++ b/hyprland/.config/hypr/conf/monitors.conf
@@ -3,4 +3,4 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,preferred,auto,auto
+monitor=DP-1,5120x1440@240,0x0,1
