--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -68,11 +68,11 @@ decoration {
     rounding_power = 2
 
     # Change transparency of focused and unfocused windows
-    active_opacity = 1.0
-    inactive_opacity = 0.95
+    # active_opacity = 1.0
+    # inactive_opacity = 0.95
 
     dim_inactive = true
-    dim_strength = 0.1
+    dim_strength = 0.4
 
     shadow {
         enabled = true
