--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -71,8 +71,8 @@ decoration {
     # active_opacity = 1.0
     # inactive_opacity = 0.95
 
-    dim_inactive = true
-    dim_strength = 0.4
+    # dim_inactive = true
+    # dim_strength = 0.4
 
     shadow {
         enabled = true
