feat: Add idle_inhibitor to waybar

--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -26,6 +26,7 @@
     ],
     "modules-right": [
         "tray",
+        "idle_inhibitor",
         "custom/updates",
         "hyprland/language",
         "custom/clipboard",
