feat: Better floating
Now will float and nicely resize to the middle of the screen.
Also added a mainMod+C key to "center"

--- a/hyprland/.config/hypr/conf/keymaps.conf
+++ b/hyprland/.config/hypr/conf/keymaps.conf
@@ -10,7 +10,8 @@ bind = $mainMod, return, exec, $terminal
 bind = $mainMod, Q, killactive,
 bind = $mainMod, Escape, exit,
 bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, V, togglefloating,
+bind = $mainMod, V, exec, ~/.config/hypr/scripts/better_floating.sh
+bind = $mainMod, C, exec, hyprctl --batch "dispatch resizeactive exact 50% 95%; dispatch moveactive 0 5%; dispatch centerwindow 1"
 bind = $mainMod, space, exec, $menu
 bind = $mainMod, TAB, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
