--- a/hyprland/.config/hypr/conf/windows_and_worspaces.conf
+++ b/hyprland/.config/hypr/conf/windows_and_worspaces.conf
@@ -20,3 +20,6 @@ layerrule = ignorezero, swaync-control-center
 layerrule = ignorezero, swaync-notification-window
 layerrule = ignorealpha, swaync-control-center
 layerrule = ignorealpha, swaync-notification-window
+
+windowrule = float, class:vlc
+windowrule = size 1200 860, class:vlc
