refactor(keymaps): Added some details what diff key combos mean, removed dwindle

--- a/hyprland/.config/hypr/conf/keymaps.conf
+++ b/hyprland/.config/hypr/conf/keymaps.conf
@@ -5,6 +5,10 @@
 # See https://wiki.hyprland.org/Configuring/Keywords/
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
+# SHIFT - Move actions
+# ALT - Alternative actions
+# CTRL - Open/execute actions
+
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, return, exec, $terminal
 bind = $mainMod, Q, killactive,
@@ -14,8 +18,6 @@ bind = $mainMod, V, exec, ~/.config/hypr/scripts/better_floating.sh
 bind = $mainMod, C, exec, hyprctl --batch "dispatch resizeactive exact 50% 95%; dispatch moveactive 0 5%; dispatch centerwindow 1"
 bind = $mainMod, space, exec, $menu
 bind = $mainMod, TAB, exec, $menu
-bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, F, fullscreen,
 bind = $mainMod, M, fullscreen, 1
 bind = $mainMod, R, exec, $HOME/.local/bin/reload
@@ -38,7 +40,10 @@ bind = $mainMod, down, movefocus, d
 
 bind = $mainMod, l, exec, hyprlock
 bind = $mainMod ALT, l, exec, wlogout
-# bind = $mainMod ALT, s, exec, alacritty -e ~/.dotfiles/stow.sh
+bind = $mainMod ALT, left, movewindow, l
+bind = $mainMod ALT, right, movewindow, r
+bind = $mainMod ALT, up, movewindow, u
+bind = $mainMod ALT, down, movewindow, d
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
@@ -52,11 +57,6 @@ bind = $mainMod, 8, workspace, 8
 bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
 
-bind = $mainMod ALT, left, movewindow, l
-bind = $mainMod ALT, right, movewindow, r
-bind = $mainMod ALT, up, movewindow, u
-bind = $mainMod ALT, down, movewindow, d
-
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
 bind = $mainMod SHIFT, 2, movetoworkspace, 2
@@ -68,7 +68,9 @@ bind = $mainMod SHIFT, 7, movetoworkspace, 7
 bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
-
+# Scroll through existing workspaces with mainMod + SHIFT + left-right
+bind = $mainMod SHIFT, right, workspace, e+1
+bind = $mainMod SHIFT, left, workspace, e-1
 # Example special workspace (scratchpad)
 bind = $mainMod, S, togglespecialworkspace, magic
 bind = $mainMod SHIFT, S, movetoworkspace, special:magic
@@ -76,10 +78,6 @@ bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
-
-# Scroll through existing workspaces with mainMod + SHIFT + left-right
-bind = $mainMod SHIFT, right, workspace, e+1
-bind = $mainMod SHIFT, left, workspace, e-1
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
