--- a/hyprland/.config/hypr/hypridle.conf
+++ b/hyprland/.config/hypr/hypridle.conf
@@ -4,11 +4,11 @@ general {
 }
 
 listener {
-    timeout = 300                             # 5min
+    timeout = 600                             # 10min
     on-timeout = loginctl lock-session        # lock screen when timeout has passed
 }
 
 listener {
-    timeout = 600                             # 10min
+    timeout = 36000                           # 1h
     on-timeout = systemctl suspend            # suspend pc
 }
