feat: Border gradient will rotate

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -104,6 +104,7 @@ animations {
     bezier = quick,0.15,0,0.1,1
 
     animation = global, 1, 10, default
+    animation = borderangle, 1, 10, quick
     animation = border, 1, 5.39, easeOutQuint
     animation = windows, 1, 4.79, easeOutQuint
     animation = windowsIn, 1, 4.1, easeOutQuint, popin 87%
