--- a/waypaper/.config/waypaper/config.ini
+++ b/waypaper/.config/waypaper/config.ini
@@ -2,7 +2,7 @@
 language = en
 folder = ~/Wallpapers
 monitors = All
-wallpaper = ~/Wallpapers/wallpapers/wp4473722-5120x1440-wallpapers.jpg
+wallpaper = ~/Wallpapers/wallpapers/wp14821464-5120x1440-wallpapers.webp
 show_path_in_tooltip = True
 backend = swww
 fill = fill
