--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -9,16 +9,16 @@
     "mode": "dock",
     "reload_style_on_change": true,
     "include": [
-        "~/.config/waybar/modules.json"
+        "~/.config/waybar/modules.jsonc"
     ],
     "modules-left": [
-        // "custom/logo",
-        "custom/weather",
-        "cpu",
-        "temperature",
-        "memory",
-        "disk",
-        "network"
+        "custom/logo",
+        "custom/weather"
+        // "cpu",
+        // "temperature",
+        // "memory",
+        // "disk",
+        // "network"
         // "hyprland/window"
     ],
     "modules-center": [
