feat: Add nautilus extensions and re-added pseudo mode
Pseudo mode is really usefull for wide screens

--- a/hyprland/.config/hypr/conf/keymaps.conf
+++ b/hyprland/.config/hypr/conf/keymaps.conf
@@ -21,6 +21,8 @@ bind = $mainMod, TAB, exec, $menu
 bind = $mainMod, F, fullscreen,
 bind = $mainMod, M, fullscreen, 1
 bind = $mainMod, R, exec, $HOME/.local/bin/reload
+bind = $mainMod, P, pseudo, # dwindle
+bind = $mainMod, J, togglesplit, # dwindle
 
 # Gamemode
 bind = $mainMod, F1, exec, ~/.config/hypr/scripts/gamemode.sh
