--- a/waypaper/.config/waypaper/config.ini
+++ b/waypaper/.config/waypaper/config.ini
@@ -1,11 +1,11 @@
 [Settings]
 language = en
-folder = ~/Wallpapers
+folder = ~/Wallpapers/wallpapers
 monitors = All
-wallpaper = ~/Wallpapers/wallpapers/wp14821464-5120x1440-wallpapers.webp
+wallpaper = ~/Wallpapers/wallpapers/aishot-1603.jpg
 show_path_in_tooltip = True
 backend = swww
-fill = fill
+fill = stretch
 sort = name
 color = #ffffff
 subfolders = True
