feat: Pseudo tiling is now on MOD + T (for tiling)

--- a/hyprland/.config/hypr/conf/keymaps.conf
+++ b/hyprland/.config/hypr/conf/keymaps.conf
@@ -21,7 +21,7 @@ bind = $mainMod, TAB, exec, $menu
 bind = $mainMod, F, fullscreen,
 bind = $mainMod, M, fullscreen, 1
 bind = $mainMod, R, exec, $HOME/.local/bin/reload
-bind = $mainMod, P, pseudo, # dwindle
+bind = $mainMod, T, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
 # Gamemode
