--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -26,7 +26,7 @@
     ],
     "modules-right": [
         "tray",
-        // "idle_inhibitor",
+        "idle_inhibitor",
         "custom/updates",
         "hyprland/language",
         // "custom/clipboard",
