feat(tf): Disabled word wrap
In terraform, word wrapping is not a good idea.

--- a/editorconfig/.editorconfig
+++ b/editorconfig/.editorconfig
@@ -46,3 +46,9 @@ indent_size = 4
 [{package.json,.travis.yml}]
 indent_style = tab
 indent_size = 4
+
+[*.tf]
+indent_style = space
+indent_size = 2
+# Don't wrap..
+max_line_length = 9999
