feat(hyprlock): Added the keyboard layout to the input so it's visible
Ref: https://wiki.hypr.land/Hypr-Ecosystem/hyprlock/#variable-substitution

--- a/hyprland/.config/hypr/hyprlock.conf
+++ b/hyprland/.config/hypr/hyprlock.conf
@@ -77,7 +77,7 @@ input-field {
     inner_color = $surface0
     font_color = $text
     fade_on_empty = false
-    placeholder_text = <span foreground="##$textAlpha">󰌾 <span foreground="##$skyAlpha">$USER</span><i> welcome to Mission Control</i> 󰌾</span>
+    placeholder_text = <span foreground="##$textAlpha">󰌾 <span foreground="##$skyAlpha">$USER</span><i> welcome to Mission Control</i> 󰌾    $LAYOUT</span>
     hide_input = false
     check_color = $accent
     fail_color = $red
