feat(hyprlock): Better place for language

--- a/hyprland/.config/hypr/hyprlock.conf
+++ b/hyprland/.config/hypr/hyprlock.conf
@@ -77,13 +77,25 @@ input-field {
     inner_color = $surface0
     font_color = $text
     fade_on_empty = false
-    placeholder_text = <span foreground="##$textAlpha">󰌾 <span foreground="##$skyAlpha">$USER</span><i> welcome to Mission Control</i> 󰌾    $LAYOUT</span>
+    placeholder_text = <span foreground="##$textAlpha">󰌾 <span foreground="##$skyAlpha">$USER</span><i> welcome to Mission Control</i> 󰌾</span>
     hide_input = false
     check_color = $accent
     fail_color = $red
     fail_text = <i>$FAIL <b>($ATTEMPTS)</b></i>
     capslock_color = $yellow
     position = 0, -35
+    halign = center
+    valign = center
+}
+
+# Language Layout
+label {
+    monitor =
+    text = $LAYOUT
+    color = $text
+    font_size = 15
+    font_family = $font
+    position = 0, -90
     halign = center
     valign = center
 }
