--- a/hyprland/.config/hypr/conf/autostart.conf
+++ b/hyprland/.config/hypr/conf/autostart.conf
@@ -6,7 +6,7 @@
 # Or execute your favorite apps at launch like this:
 
 exec-once = waybar & hypridle & swaync
-exec-once = waycorner
+# exec-once = waycorner
 exec-once = swww-daemon & swww restore # Restores wallpaper
 exec-once = wl-paste --type text --watch cliphist store # Stores only text data
 exec-once = wl-paste --type image --watch cliphist store # Stores only image data
