feat(waybar): Added a bar for battery

--- a/waybar/.config/waybar/modules.jsonc
+++ b/waybar/.config/waybar/modules.jsonc
@@ -203,5 +203,16 @@
         "format": "<span color='#00FFFF'>  </span>",
         "on-click": "hyprlock",
         "tooltip": false
-    }
+    },
+    "battery": {
+    "bat": "BAT2",
+    "interval": 60,
+    "states": {
+        "warning": 30,
+        "critical": 15
+    },
+    "format": "{capacity}% {icon}",
+    "format-icons": ["", "", "", "", ""],
+    "max-length": 25
+}
 }
