--- a/hyprland/.config/hypr/conf/input.conf
+++ b/hyprland/.config/hypr/conf/input.conf
@@ -16,6 +16,9 @@ input {
 
     touchpad {
         natural_scroll = false
+        scroll_factor = 0.4
+        clickfinger_behavior = true
+        tap-to-click = false
     }
 
     # keyboard reeat delay
@@ -25,7 +28,8 @@ input {
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
 gestures {
-    workspace_swipe = false
+    workspace_swipe = true
+    workspace_swipe_invert = false
 }
 
 # Example per-device config
