feat(laptop, battery): Made the battery have colors and added an icon
Also set states/thresholds

--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -33,8 +33,8 @@
         "custom/colorpicker",
         // "group/pulse",
         "group/sound",
-        "custom/notification",
         "battery",
-        "clock"
+        "clock",
+        "custom/notification",
     ]
 }
