feat: Replace `wofi` with `sherlock`

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -16,7 +16,8 @@
 # See https://wiki.hyprland.org/Configuring/Keywords/
 $terminal = alacritty
 $fileManager = nautilus
-$menu = wofi --show drun
+# $menu = wofi --show drun
+$menu = sherlock
 $browser = brave
 
 source = ~/.config/hypr/conf/layout.conf
