--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -48,7 +48,7 @@ general {
     gaps_in = 5
     gaps_out = 5
 
-    border_size = 2
+    border_size = 0
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
     col.active_border = rgba(33ccffee) rgba(00ff99ee) 0deg
@@ -68,12 +68,8 @@ decoration {
     rounding = 10
     rounding_power = 2
 
-    # Change transparency of focused and unfocused windows
-    # active_opacity = 1.0
-    # inactive_opacity = 0.95
-
-    # dim_inactive = true
-    # dim_strength = 0.4
+    active_opacity = 1
+    inactive_opacity = 0.95
 
     shadow {
         enabled = false
