--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -1,40 +1,147 @@
 {
-    "layer": "top", // Waybar at top layer
-    "position": "top", // Waybar position (top|bottom|left|right)
-    "spacing": 4, // Gaps between modules (4px)
-    "height": 10,
-    "margin-top": 4,
-    "margin-left": 8,
-    "margin-right": 8,
-    "mode": "dock",
-    "reload_style_on_change": true,
-    "include": [
-        "~/.config/waybar/modules.jsonc"
-    ],
+    "position": "top",
+    "exlusive": "true",
+    "passthrough": "true",
+    "gtk-layer-shell": "true",
+    "margin-top": 10,
+    "margin-left": 10,
+    "margin-right": 10,
+    "height": 41,
     "modules-left": [
-        // "custom/logo",
         "custom/weather",
-        // "cpu",
-        // "temperature",
-        // "memory",
-        // "disk",
-        "network"
-        // "hyprland/window"
+        "cpu",
+        "memory",
+        "disk",
     ],
     "modules-center": [
-        "hyprland/workspaces",
+        "hyprland/workspaces"
     ],
     "modules-right": [
-        "tray",
-        "idle_inhibitor",
-        "custom/updates",
         "hyprland/language",
-        // "custom/clipboard",
-        "custom/colorpicker",
-        // "group/pulse",
-        "group/sound",
-        "battery",
+        "pulseaudio",
+        "pulseaudio#microphone",
         "clock",
-        "custom/notification",
-    ]
+        "separator",
+        "tray"
+    ],
+    "tray": {
+        "icon-size": 16,
+        "icon-theme": "Papirus",
+        "spacing": 2,
+    },
+    "custom/spacer": {
+        "format": " ", // Empty space
+        "tooltip": false
+    },
+    "separator": {
+        "format": " | "
+    },
+    "hyprland/window": {
+        "format": "{}",
+        "max-length": 35,
+        "rewrite": {
+            "": "Harsh"
+        },
+        "separate-outputs": true
+    },
+    "hyprland/workspaces": {
+        "format": "{icon}",
+        "on-click": "activate",
+        "format-icons": {
+            "1": "",
+            "2": "",
+            "3": "",
+            "4": "",
+            "5": "",
+            "6": "",
+            "7": "",
+            "8": "",
+            "9": "",
+            "active": "",
+            "urgent": "",
+            "persistent": "",
+            "focused": "",
+            "default": "",
+        },
+        "sort-by-number": true,
+        "persistent-workspaces": {
+            "*": 9,
+        }
+    },
+    "clock": {
+        "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
+        "format": "<span color='#89b4fa'>󰥔 </span><span color='#cdd6f4'>{:%H:%M | %a %d %b}</span>",
+        "format-alt": "{:%Y-%m-%d}"
+    },
+    "cpu": {
+        "format": "<span color='#89b4fa'>󰍛</span> <span color='#cdd6f4'>{usage}%</span>",
+        "interval": 1,
+        "format-alt-click": "click",
+        "format-alt": "<span color='#00FF00'>{icon0}{icon1}{icon2}{icon3}</span> <span color='#FFFFFF'>{usage:>2}%</span> <span color='#00FF00'>󰍛</span>",
+        "format-icons": [
+            "▁",
+            "▂",
+            "▃",
+            "▄",
+            "▅",
+            "▆",
+            "▇",
+            "█"
+        ],
+        "on-click": "gnome-system-monitor"
+    },
+    "memory": {
+        "interval": 3,
+        "format": "<span color='#f38ba8'> </span> <span color='#cdd6f4'>{used:0.1f}G</span>"
+    },
+    "custom/weather": {
+        "format": "{}",
+        "return-type": "json",
+        "exec": "~/.config/waybar/scripts/weather.sh",
+        "interval": 600,
+        "on-click": "brave https://wttr.in"
+    },
+    "pulseaudio": {
+        "format": "<span color='#a6e3a1'>{icon} </span><span color='#cdd6f4'>{volume}%</span>",
+        "format-bluetooth": "<span color='#a6e3a1'>{icon}</span>  <span color='#cdd6f4'>{volume}%</span>",
+        "tooltip": false,
+        "format-muted": "<span color='#f38ba8'>󰝟</span>",
+        "on-click": "wpctl set-mute @DEFAULT_SINK@ toggle",
+        "on-scroll-up": "wpctl set-volume @DEFAULT_SINK@ 10%+",
+        "on-scroll-down": "wpctl set-volume @DEFAULT_SINK@ 10%-",
+        "on-click-right": "pavucontrol",
+        "format-icons": {
+            "headphone": "",
+            "hands-free": "",
+            "headset": "",
+            "phone": "",
+            "portable": "",
+            "car": "",
+            "default": [
+                "",
+                "",
+                "",
+            ]
+        }
+    },
+    "pulseaudio#microphone": {
+        "format": "{format_source}",
+        "format-source": "<span color='#f38ba8'> </span><span color='#cdd6f4'>{volume}%</span>",
+        "format-source-muted": "",
+        "on-click": "wpctl set-mute @DEFAULT_SOURCE@ toggle",
+        "on-scroll-up": "wpctl set-volume @DEFAULT_SOURCE@ 5%+",
+        "on-scroll-down": "wpctl set-volume @DEFAULT_SOURCE@ 5%-",
+        "on-click-right": "pavucontrol",
+    },
+    "hyprland/language": {
+        "format": " {}",
+        "format-en": "en",
+        "format-bg": "bg",
+    },
+    "disk": {
+        "interval": 3,
+        "path": "/home",
+        "format": "<span color='#a6e3a1'> </span><span color='#cdd6f4'>{free}</span>",
+        "unit": "GB"
+    },
 }
