feat: Installing wallpaperengine

--- a/hyprland/.config/hypr/conf/autostart.conf
+++ b/hyprland/.config/hypr/conf/autostart.conf
@@ -7,7 +7,7 @@
 
 exec-once = waybar & hypridle & swaync
 # exec-once = waycorner
-exec-once = swww-daemon & swww restore # Restores wallpaper
+# exec-once = swww-daemon & swww restore # Restores wallpaper
 exec-once = wl-paste --type text --watch cliphist store # Stores only text data
 exec-once = wl-paste --type image --watch cliphist store # Stores only image data
 exec-once = systemctl --user start hyprpolkitagent
