--- a/waybar/.config/waybar/modules.jsonc
+++ b/waybar/.config/waybar/modules.jsonc
@@ -74,7 +74,7 @@
             "▇",
             "█"
         ],
-        "on-click": "gnome-system-monitor"
+        "on-click-right": "gnome-system-monitor"
     },
     "memory": {
         "interval": 3,
