--- a/hyprland/.config/hypr/conf/keymaps.conf
+++ b/hyprland/.config/hypr/conf/keymaps.conf
@@ -40,7 +40,7 @@ bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
 
-bind = $mainMod, l, exec, hyprlock
+bind = $mainMod, l, exec, systemctl suspend
 bind = $mainMod ALT, l, exec, wlogout
 bind = $mainMod ALT, left, movewindow, l
 bind = $mainMod ALT, right, movewindow, r
