feat: Made the waybar prettier
Just a bunch of changes I want regarding style and what is shown

--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -22,11 +22,12 @@
     ],
     "modules-right": [
         "custom/updates",
+        "tray",
         "idle_inhibitor",
         "hyprland/language",
         "pulseaudio",
-        "clock",
         "battery",
-        "tray"
+        "custom/notification",
+        "clock",
     ],
 }
