feaT: Add power profiles

--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -27,6 +27,7 @@
         "hyprland/language",
         "pulseaudio",
         "battery",
+        "power-profiles-daemon",
         "custom/notification",
         "clock",
     ],
