--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -26,6 +26,7 @@ source = ~/.config/hypr/conf/monitors.conf
 source = ~/.config/hypr/conf/keymaps.conf
 source = ~/.config/hypr/conf/input.conf
 source = ~/.config/hypr/conf/windows_and_worspaces.conf
+source = ~/.config/hypr/conf/plugins.conf
 
 #############################
 ### ENVIRONMENT VARIABLES ###
