--- a/hyprland/.config/hypr/conf/autostart.conf
+++ b/hyprland/.config/hypr/conf/autostart.conf
@@ -11,6 +11,7 @@ exec-once = swww-daemon & swww restore # Restores wallpaper
 exec-once = wl-paste --type text --watch cliphist store # Stores only text data
 exec-once = wl-paste --type image --watch cliphist store # Stores only image data
 exec-once = systemctl --user start hyprpolkitagent
+exec-once = hyprpm reload -n # Load all enabled and installed plugins
 
 # Temporary. Need a better fix
 
