feat: Add fingerprints support

--- a/hyprland/.config/hypr/hyprlock.conf
+++ b/hyprland/.config/hypr/hyprlock.conf
@@ -10,6 +10,11 @@ general {
     hide_cursor = true
 }
 
+auth {
+    fingerprint:enabled = true
+    fingerprint:retry_delay = 1000
+}
+
 background {
     monitor =
     path = screenshot
