--- a/hyprpanel/.config/hyprpanel/config.json
+++ b/hyprpanel/.config/hyprpanel/config.json
@@ -20,11 +20,11 @@
         "netstat",
         "updates",
         "kbinput",
-        "systray",
         "volume",
         "battery",
         "clock",
-        "notifications"
+        "notifications",
+        "systray"
       ]
     }
   },
