--- a/waypaper/.config/waypaper/config.ini
+++ b/waypaper/.config/waypaper/config.ini
@@ -2,7 +2,7 @@
 language = en
 folder = ~/Wallpapers/wallpapers
 monitors = All
-wallpaper = ~/Wallpapers/wallpapers/wp7786809-5120x1440-wallpapers.png
+wallpaper = ~/Wallpapers/wallpapers/aishot-1603.jpg
 show_path_in_tooltip = True
 backend = swww
 fill = stretch
