feat: Easy installation script

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -23,6 +23,7 @@ set -ag terminal-overrides ",xterm-256color:RGB"
 # I need these to be working outside of nvim, so add them here
 bind-key "o" neww "tmux-sessionizer 'nvim .'"
 bind-key "O" send-keys "tmux-panelizer 'nvim .'" Enter
+bind-key "i" new "tmx-pkg"
 bind-key -r b break-pane -d                                         # Break pane to new window
 
 bind-key -r m resize-pane -Z                                        # Maximize And Minimize Panes
