feat: Launcher and dependencies

--- a/hyprland/.config/hypr/conf/keymaps.conf
+++ b/hyprland/.config/hypr/conf/keymaps.conf
@@ -9,15 +9,14 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 # ALT - Alternative actions
 # CTRL - Open/execute actions
 
-# Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
+# Commands and stuff
 bind = $mainMod, return, exec, $terminal 
 bind = $mainMod, Q, killactive,
 bind = $mainMod, Escape, exit,
-bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, exec, ~/.config/hypr/scripts/better_floating.sh
 bind = $mainMod, C, exec, hyprctl --batch "dispatch resizeactive exact 50% 95%; dispatch moveactive 0 5%; dispatch centerwindow 1"
 bind = $mainMod, space, exec, $menu
-bind = $mainMod, TAB, exec, $menu
+bind = $mainMod, TAB, exec, super-menu
 bind = $mainMod, F, fullscreen,
 bind = $mainMod, M, fullscreen, 1
 bind = $mainMod, R, exec, $HOME/.local/bin/reload
@@ -27,12 +26,12 @@ bind = $mainMod, J, togglesplit, # dwindle
 # Gamemode
 bind = $mainMod, F1, exec, ~/.config/hypr/scripts/gamemode.sh
 
-# Open apps with mainMod and alt
-
+# Open apps and tuis with mainMod and ctrl
 bind = $mainMod CTRL, B, exec, $browser
 bind = $mainMod CTRL, O, exec, obsidian
 bind = $mainMod CTRL, S, exec, steam
 bind = $mainMod CTRL, D, exec, discord
+bind = $mainMod CTRL, E, exec, $fileManager
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
