--- a/hyprland/.config/hypr/conf/windows_and_worspaces.conf
+++ b/hyprland/.config/hypr/conf/windows_and_worspaces.conf
@@ -22,3 +22,6 @@ layerrule = ignorealpha, swaync-control-center
 layerrule = ignorealpha, swaync-notification-window
 
 windowrule = float, class:vlc
+windowrule = float, class:Informative
+
+layerrule = noanim, rofi
