--- a/sherlock/.config/sherlock/config.toml
+++ b/sherlock/.config/sherlock/config.toml
@@ -1,6 +1,4 @@
 [default_apps]
-teams = "teams-for-linux --enable-features=UseOzonePlatform --ozone-platform=wayland --url {meeting_url}"
-calendar_client = "thunderbird"
 terminal = "alacritty"
 browser = "brave %U"
 
@@ -28,7 +26,7 @@ mod_key_ascii = ["⇧", "⇧", "⌘", "⌘", "⎇", "✦", "✦", "⌘"]
 
 [behavior]
 use_xdg_data_dir_icons = false
-animate = true
+animate = false
 
 [binds]
 up = "control-k"
