--- a/hyprland/.config/hypr/conf/keymaps.conf
+++ b/hyprland/.config/hypr/conf/keymaps.conf
@@ -16,7 +16,7 @@ bind = $mainMod, Escape, exit,
 bind = $mainMod, V, exec, ~/.config/hypr/scripts/better_floating.sh
 bind = $mainMod, C, exec, hyprctl --batch "dispatch resizeactive exact 50% 95%; dispatch moveactive 0 5%; dispatch centerwindow 1"
 bind = $mainMod, space, exec, $menu
-bind = $mainMod, TAB, exec, super-menu
+bind = $mainMod, TAB, exec, $HOME/.local/bin/super-menu
 bind = $mainMod, F, fullscreen,
 bind = $mainMod, M, fullscreen, 1
 bind = $mainMod, R, exec, $HOME/.local/bin/reload
