feat: Better super-menu, with a lot of more stuff

--- a/hyprland/.config/hypr/conf/keymaps.conf
+++ b/hyprland/.config/hypr/conf/keymaps.conf
@@ -41,6 +41,7 @@ bind = $mainMod, down, movefocus, d
 
 bind = $mainMod, l, exec, systemctl suspend
 bind = $mainMod ALT, l, exec, wlogout
+bindd = $mainMod ALT, e, Emoji Picker, exec, rofi -modi emoji -show emoji
 bind = $mainMod ALT, left, movewindow, l
 bind = $mainMod ALT, right, movewindow, r
 bind = $mainMod ALT, up, movewindow, u
