--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -16,8 +16,7 @@
 # See https://wiki.hyprland.org/Configuring/Keywords/
 $terminal = alacritty
 $fileManager = nautilus
-# $menu = wofi --show drun
-$menu = sherlock
+$menu = rofi -show drun
 $browser = brave
 
 source = ~/.config/hypr/conf/layout.conf
