feat(hyprland): Better windowrules for Informative classes

--- a/hyprland/.config/hypr/conf/windows_and_worspaces.conf
+++ b/hyprland/.config/hypr/conf/windows_and_worspaces.conf
@@ -23,5 +23,7 @@ layerrule = ignorealpha, swaync-notification-window
 
 windowrule = float, class:vlc
 windowrule = float, class:Informative
+windowrule = size 1280 900, class:Informative
+windowrule = bordersize 2, class:Informative
 
 layerrule = noanim, rofi
