feat: Added stocks to the supermenu

--- a/hyprland/.config/hypr/conf/windows_and_worspaces.conf
+++ b/hyprland/.config/hypr/conf/windows_and_worspaces.conf
@@ -22,8 +22,13 @@ layerrule = ignorealpha, swaync-control-center
 layerrule = ignorealpha, swaync-notification-window
 
 windowrule = float, class:vlc
+
 windowrule = float, class:Informative
-windowrule = size 1280 900, class:Informative
+windowrule = size 35% 75%, class:Informative
 windowrule = bordersize 2, class:Informative
+
+windowrule = float, class:xl-Informative
+windowrule = size 50% 75%, class:xl-Informative
+windowrule = bordersize 2, class:xl-Informative
 
 layerrule = noanim, rofi
